--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -10,6 +10,7 @@
 @import "./cmp/showUsers.css";
 @import "./cmp/uploadMoreDiplomas.css";
 @import "./cmp/breathe.css";
+@import "./cmp/medicalCard.css";
 
 /* fonts */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300&display=swap');
